--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,102 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+def is_valid(board, row, col, num):
+  """
+  Checks if a given number is valid in a given row, column, and 3x3 box.
 
-# C extensions
-*.so
+  Args:
+    board: A 9x9 Sudoku board.
+    row: The row of the cell to check.
+    col: The column of the cell to check.
+    num: The number to check.
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+  Returns:
+    True if the number is valid, False otherwise.
+  """
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+  # Check if the number is already in the row.
+  for i in range(9):
+    if board[row][i] == num:
+      return False
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+  # Check if the number is already in the column.
+  for i in range(9):
+    if board[i][col] == num:
+      return False
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+  # Check if the number is already in the 3x3 box.
+  box_row = row // 3
+  box_col = col // 3
+  for i in range(3):
+    for j in range(3):
+      if board[box_row * 3 + i][box_col * 3 + j] == num:
+        return False
 
-# Translations
-*.mo
-*.pot
+  return True
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+def solve_sudoku(board):
+  """
+  Solves a Sudoku puzzle.
 
-# Scrapy stuff:
-.scrapy
+  Args:
+    board: A 9x9 Sudoku board.
 
-# Sphinx documentation
-docs/_build/
+  Returns:
+    True if the puzzle is solved, False otherwise.
+  """
 
-# PyBuilder
-.pybuilder/
-target/
+  # Find an empty cell.
+  for row in range(9):
+    for col in range(9):
+      if board[row][col] == 0:
+        break
 
-# Jupyter Notebook
-.ipynb_checkpoints
+  # If we reach the end of the board, the puzzle is solved.
+  if row == 8 and col == 8:
+    return True
 
-# IPython
-profile_default/
-ipython_config.py
+  # Try each possible number in the cell.
+  for num in range(1, 10):
+    if is_valid(board, row, col, num):
+      board[row][col] = num
+      if solve_sudoku(board):
+        return True
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+      # If we reach this point, the number we tried was not valid.
+      board[row][col] = 0
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+  # If we tried all possible numbers and none of them worked, the puzzle is
+  # unsolvable.
+  return False
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
+def get_user_input():
+  """
+  Prompts the user for a Sudoku board and returns the board as a list of lists.
+  """
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+  board = []
+  for row in range(9):
+    line = input("Enter row {}: ".format(row + 1))
+    board.append([int(x) for x in line.split()])
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+  return board
 
-# SageMath parsed files
-*.sage.py
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+def main():
+  # Get the Sudoku board from the user.
+  board = get_user_input()
 
-# Spyder project settings
-.spyderproject
-.spyproject
+  try:
+    # Solve the Sudoku puzzle.
+    if solve_sudoku(board):
+      # Print the solved puzzle.
+      for row in board:
+        print(" ".join(map(str, row)))
+    else:
+      print("The puzzle is unsolvable.")
+  except Exception as e:
+    print("An error occurred:", e)
 
-# Rope project settings
-.ropeproject
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+if __name__ == "__main__":
+  main()
